# hithand_ros

./: .gitignore  README.md
Models/hithand/: hithand.sdf  hithand.urdf  meshes  model.config  model.sdf  model.urdf  package.xml
Models/hithand/meshes/collision/: COL_gelenkhuelse_2.dae  COL_head.dae  COL_shank_right.dae  COL_thigh_left.dae  COL_upper_arm_left.dae
Models/hithand/meshes/collision/CAD/: COL_head.STL  (+3 more)
Models/hithand/meshes/visual/: hit-hand-2-finger-phaprox.stl  hit-hand-2-palm-right-simplied.stl
Models/hithand/old_meshes/collision/: COL_fuss_rechts.dae  COL_gelenkhuelse_1.dae  COL_hip.dae  COL_neck.dae  COL_upper_arm_right.dae  COL_vertebrae_1.dae  COL_vertebrae_3.dae
hithand_description/: CMakeLists.txt  hithand.sdf  hithand_mojuco.urdf  hithand_mojuco.xml  model.config  package.xml
hithand_description/bagfiles/: 2020-03-18-16-07-10.bag.active
hithand_description/launch/: $  display.launch
hithand_description/meshes/collision/: COL_hand_right.dae  COL_lower_arm_left.dae  COL_lower_arm_right.dae  COL_neck_cross.dae  COL_spine.dae  COL_torso.dae  hit-hand-2-palm-left_100_faces.dae  hit-hand-2-palm-right_100_faces.dae
hithand_description/meshes/visual/: hit-hand-2-finger-basecover.stl  hit-hand-2-palm-right-1_of_10-vertices.dae  hit-hand-2-palm-right-1_of_10-vertices.stl  hit-hand-2-palm-right-1_of_20-vertices.stl  hit-hand-2-palm-right-simplied.dae
hithand_description/scripts/: euler2rpy.py
hithand_description/urdf/: hithand.gazebo  hithand.sdf  hithand.transmission.xacro  hithand.urdf  hithand.urdf.xacro  hithand.xacro  transmission.xacro
(+87 files in other folders)
